# scrypt

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  justfile
.cargo/: config.toml
.github/workflows/: ci.yml
config/: default.toml
crates/sc-cli/: Cargo.toml
crates/sc-cli/src/: cli.rs  main.rs  output.rs
crates/sc-core/: Cargo.toml
crates/sc-core/src/: config.rs  error.rs  lib.rs  logging.rs  types.rs
crates/sc-crypto/: Cargo.toml
crates/sc-crypto/src/: lib.rs
crates/sc-mesh/: Cargo.toml  build.rs
crates/sc-mesh/src/: lib.rs
crates/sc-pcap/: Cargo.toml
crates/sc-pcap/src/: analyze.rs  capture.rs  lib.rs  reader.rs  replay.rs
crates/sc-plugin/: Cargo.toml
crates/sc-plugin/src/: lib.rs  lua_engine.rs  manager.rs  native_loader.rs  traits.rs
crates/sc-protocol/: Cargo.toml
crates/sc-protocol/src/: dissector.rs  lib.rs  model.rs  patterns.rs  pipeline.rs  registry.rs
crates/sc-protocol/src/builtins/: arp.rs  dns.rs  ethernet.rs  http.rs  icmp.rs  icmpv6.rs  ipv4.rs  ipv6.rs  mod.rs  quic.rs  tcp.rs  udp.rs
crates/sc-sandbox/: Cargo.toml
crates/sc-sandbox/src/: lib.rs
crates/sc-tls/: Cargo.toml
crates/sc-tls/src/: lib.rs
crates/sc-tui/: Cargo.toml
crates/sc-tui/src/: lib.rs
plugins/scripts/: dns.lua  http.lua
proto/: mesh.proto
