[package]
name = "sc-crypto"
description = "$crypt cryptographic primitives with hardware acceleration"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sc-core = { workspace = true }
aes-gcm = { workspace = true }
chacha20poly1305 = { workspace = true }
zeroize = { workspace = true }
x25519-dalek = { workspace = true }
hkdf = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
