[package]
name = "sc-protocol"
description = "$crypt protocol dissection framework with zero-copy parsing"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sc-core = { workspace = true }
nom = { workspace = true }
bytes = { workspace = true }
aho-corasick = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
