[package]
name = "sc-sandbox"
description = "$crypt execution sandboxing via seccomp-bpf and landlock"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sc-core = { workspace = true }
seccompiler = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
