[package]
name = "sc-tls"
description = "$crypt TLS 1.3 handshake analysis and decryption engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sc-core = { workspace = true }
sc-crypto = { workspace = true }
sc-protocol = { workspace = true }
nom = { workspace = true }
x509-parser = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
